--- a/liquid-xp-farm/control
+++ b/liquid-xp-farm/control
@@ -6,6 +6,9 @@ local pedestalSide = "dm_pedestal_0"
 local barrelSide = "deep_storage_unit_0"
 local tankPOS = "-3,5,5"
 local rednetSide = "top"
+local bundledSide = "bottom"
+local xpActivatorColor = colors.yellow
+local growthActivatorColor = colors.brown
 
 rednet.open(rednetSide)
 
@@ -21,6 +24,8 @@ local tank = nil
 
 function update()
   tank = tankAPI.getTank(tankPOS, tankServerId)
+
+  updateButtons()
 end
 
 function updateButtons()
@@ -45,6 +50,12 @@ end
 function resetGrowth() 
   pedestal.pushItemIntoSlot("down",1,1,1)
   pedestal.pullItemIntoSlot("down",1,1,1)
+end
+
+function toggleGrowth()
+  redstone.setBundledOutput(bundledSide, colors.combine(redstone.getBundledOutput(bundledSide), growthActivatorColor))
+  os.sleep(.05)
+  redstone.setBundledOutput(bundledSide, colors.subtract(redstone.getBundledOutput(bundledSide), growthActivatorColor))
 end
 
 function isActive(button)
@@ -86,8 +97,10 @@ while true do
     elseif p1 == "Off" then
     elseif p1 == "Auto" then
     elseif p1 == "Grow" then
+      toggleGrowth()
+      growth = not growth
     end
-    updateButtons()
+    update()
   elseif event == "timer" and p1 == updateTimer then
     update()
     draw()
